# oasisdb

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  client.py  conf.yaml  example.py  gemini.go  go.mod  go.sum  pyproject.toml  readmd-CN.md  readme-CN.md  readme.md
.github/: push_pr.yml  release.yml
.github/workflows/: push_pr.yml  release.yml
Rag/: main.go  readme.md
Rag/internal/: rag.go
Rag/test/: rag_test.go
benchmarks/: README.md  fashion_results.csv  plot_recall_qps.py  results.csv  run_benchmarks.py  sift_results.csv
client-sdk/Go/: client.go  client_test.go  example.go
client-sdk/Go/client/: client.go
client-sdk/Python/: client.py  jiankong.py  pyproject.toml  test_fashion_mnist.py
clients/: client.py
cmd/: main.go  main_test.go
cmd/benchrecall/: main.go
docs/: api-CN.md  api.md  design-CN.md  design.md  embedding.md  设计理念.md
example/Go/: example.go
internal/benchrecall/: bruteforce.go  bruteforce_test.go  fashion_mnist.go  fashion_mnist_test.go  fvecs.go  fvecs_test.go  run.go  sift1m.go
internal/cache/: LRUCache.go  cache.go  lru_cache.go  lru_cache_test.go
internal/config/: config.go  config_test.go
internal/db/: additional_test.go  collection.go  collection_test.go  db.go  document.go  document_test.go
internal/embedding/: embedding.go
internal/embedding/provider/: aliyun.go  aliyun_test.go  openai.go  types.go
internal/engine/: CMakeLists.txt
internal/engine/c_api/hnsw/: hnsw_c_api.cpp  hnsw_c_api.h
internal/engine/c_api/ivf/: ivf_c_api.cpp  ivf_c_api.h
internal/engine/go_api/hnsw/: hnsw_go_api.go
internal/engine/go_api/ivf/: ivf_go_api.go
internal/engine/index/ivf/: ivf.h
internal/engine/indexlib/hnswlib/: hnswalg.h
internal/grpc/: grpc.go
internal/index/: const.go  distance.go  distance_test.go  flat.go  flat_test.go  hnsw.go  hnsw_test.go  index.go  indexFactory.go  index_factory.go  index_manager.go  index_manager_test.go  ivf.go  ivf_test.go  ivfpq.go  ivfpq_test.go  utils.go  utils_test.go  wal.go  wal_test.go
internal/router/: router.go
internal/server/: handlers.go  handlers_test.go  server.go  types.go
internal/storage/: node.go  node_test.go  storage.go  storage_test.go  tree.go
internal/storage/filter/: bloom_filter.go  bloom_filter_test.go  filter.go
internal/storage/memtable/: benchmark_test.go  memtable.go  skiplist.go  skiplist_old.go  skiplist_test.go
internal/storage/sstable/: block.go  block_test.go  builder.go  sstable.go  sstable_reader.go  sstable_reader_test.go  sstable_writer.go  sstable_writer_test.go
internal/storage/tree/: additional_test.go  node.go  node_test.go  tree.go  tree_compact.go  tree_restore.go  tree_test.go
internal/storage/wal/: additional_test.go  reader.go  reader_test.go  wal.go  writer.go  writer_test.go
pkg/errors/: errors.go  errors_test.go
pkg/logger/: logger.go  logger_test.go
pkg/utils/: string.go  string_test.go
script/: compact_test.py  create_release.sh  log_monitor.py  remove_all.sh  run_compact_test.sh  start.sh  stop.sh
